Version 4.12

* FEATURE: Add support for receiving pushed aggregator/extender configuration updates.
* FEATURE: Create a signature by prepending a lower aggregation hash chain to an existing signature.
* IMPROVEMENT: Separated extender and signer settings in tests and properties.
* IMPROVEMENT: Added convenience methods for creating TLVElement and setting its content.
* IMPROVEMENT: For aggregation and extension requests take HMAC algorithm from credentials.
* IMPROVEMENT: Add option to set HMAC algorithm that is used in tests via integrationtest.properties.
* BUGFIX: KSI close now closes publications client/service.
* BUGFIX: Tests are now closing services, clients and KSI.
* BUGFIX: Hash data imprint when hashing DataHash object.

Version 4.11

2018-01-09 4.11.153

* FEATURE: Now Possible to extend with TCPClient. Also possible to initialize SigingTCPClient and ExtenderTCPClient separately. Deprecated TCPClient(TCPClientSettings) constructor.
* IMPROVEMENT: Added support for Java 9. Removed support for Java 5 and Java 6.
* IMPROVEMENT: Removed old deprecated methods.
* IMPROVEMENT: Added default verification policy and default context aware verification policy.
* IMPROVEMENT: BlockSigner returns signature in the same order as the data hashes were added to queue.
* IMPROVEMENT: Blocksigner only adds user provided metadata.
* IMPROVEMENT: Handling of deprecated and obsolete hash functions, SHA-1 is marked as deprecated and not trusted.
* IMPROVEMENT: Added hash level to signing interface.
* IMPROVEMENT: The RFC3161 compatibility record output hash algorithm deprecated verification rule.
* IMPROVEMENT: Verification of the validity of the signing certificate during aggregation time.
* IMPROVEMENT: Adjusted publication based, key based and internal verification policies.
* IMPROVEMENT: Default executor service thread pool size is configurable.
* IMPROVEMENT: Upgraded Jacoco dependency from version dependency 0.7.5.201505241946 to 0.7.9